Fixed line spacing for mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -68,6 +68,10 @@ display: line;
     h2{
         font-size:25px;
     }
+    p{
+        line-height: 20px;
+    }
+    
 }
 
 /**
